--- a/wedd.html
+++ b/wedd.html
@@ -9,13 +9,13 @@
 
     <body background="image1.jpg">
     
-    <h1 >Wedding Planners</h1>
+    <h1>Event organiser</h1>
     
     <div class="keys">
       <a href="wedd.html"><span>HOME</span></a>
       <a href="Services.html"><span> SERVICES</span></a>
-      <a href="About.html"><span>ABOUT US</span></a>
-      <a href="contact.html"><span>CONTACT US</span>  </a>
+      <a href="About.html"><span>ABOUTUS</span></a>
+      <a href="contact.html"><span>CONTACTUS</span>  </a>
     </div>
    
  
