--- a/contact.html
+++ b/contact.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="style.css"rel="stylesheet" type="text/css">
 </head>
 <body>
     <div class="keys">
         <a href="C:\Users\yadav\OneDrive\Desktop\wedding.html\wedd.html"><span>HOME</span></a>
         <a href="C:\Users\yadav\OneDrive\Desktop\wedd.html\Services.html"><span> SERVICES</span></a>
-        <a href="C:\Users\yadav\OneDrive\Desktop\wedd.html\About.html"><span>ABOUT US</span>  </a>
-        <a href="C:\Users\yadav\OneDrive\Desktop\wedd.html\contact.html"><span>CONTACT US</span>  </a>
+        <a href="C:\Users\yadav\OneDrive\Desktop\wedd.html\About.html"><span>ABOUTUS</span>  </a>
+        <a href="C:\Users\yadav\OneDrive\Desktop\wedd.html\contact.html"><span>CONTACTUS</span>  </a>
     </div>
 </body>
 </html>
