--- a/wedd.html
+++ b/wedd.html
@@ -10,6 +10,7 @@
     <body background="image1.jpg">
     
     <h1>Event organiser</h1>
+    <h2> my new changes on the wedd project </h2>
     
     <div class="keys">
       <a href="wedd.html"><span>HOME</span></a>
