add image in services

--- a/Services.html
+++ b/Services.html
@@ -19,5 +19,10 @@
     <h1>The complete events for ocassion </h1>
     <h2>our Services</h2>
  </div>
+ <div class="img"> 
+ <img src="./image2.jpg">
+ <img src="./mehndi.jpg">
+ <img src="./OIP.jpg">
+ </div>
 </body>
 </html>
