--- a/wedd.html
+++ b/wedd.html
@@ -9,7 +9,7 @@
 
     <body background="image1.jpg">
     
-    <h1>Event organiser</h1>
+    <h1>Event Organiser</h1>
     
     <div class="keys">
       <a href="wedd.html"><span>HOME</span></a>
