--- a/Services.html
+++ b/Services.html
@@ -7,22 +7,64 @@
     <title>service</title>
     <link href="style.css"rel="stylesheet" type="text/css">
 </head>
-<body  class="ser">
+<body style="background-color: rgb(212, 206, 206); margin-left: 70px;">
+    <h1>The complete service for every ocassion </h1>
     <div class="keys">
         <a href="wedd.html"><span>HOME</span></a>
         <a href="Services.html"><span> SERVICES</span></a>
         <a href="About.html"><span>ABOUTUS</span>  </a>
         <a href="contact.html"><span>CONTACTUS</span>  </a>
     </div>
-    <div > 
-         
-    <h1>The complete events for ocassion </h1>
-    <h2>our Services</h2>
- </div>
+
+          <h2>Our Services</h2>
+ 
  <div class="img"> 
- <img src="./image2.jpg">
- <img src="./mehndi.jpg">
- <img src="./OIP.jpg">
+ <img src="./image2.jpg" width="30%">
+ <img src="./c.jpg" width="30%" height="242px">
+ <img src="./u.webp" width="30%" height="242px">
  </div>
+  <pre style="font-size: 30px; color: white;" > WEDDING PLANING            CORPORATIVE EVENT          BIRTHDAY PARTY</pre>
+     <button class="book-button">BOOK  AN  EVENT</button>
+     <P class="ss">BEST WEDDING PLANNING, BIRTHDAY PARTY, CORPORATE PARTY ORGANIZER</P>
+  <table>
+    <tr>
+        <td class="w"><img src="ww.jpg" width="60%"></td>
+        <td class="ww"><pre>      <div class="b">  <b>  WEDDING PLANNING </b> </div> 
+
+     • THEME DECOR   
+     • CATERING & STAGE SETUP
+     • PHOTOGRAPHY
+     • ENTERTAINMENT
+     • VENUE & INVITATION
+     • FLORAL ARRANGEMENT</pre></td>
+    </tr>
+    <tr>
+        <td class="ww"><pre>  <div class="b">    <b> BIRTHDAY PARTY </b> </div> 
+
+      • CATERING
+      • THEME DECORATION
+      • THEME BASED CAKE
+      • ENTERTAINMENT
+      • VENUE
+      • INVITATION
+      • PHOTOGRAPHY</pre></td>
+        <td><img src="h.jpg" alt=""></td>
+
+    </tr>
+    <tr>
+        <td><img src="c.jpg" ></td>
+        <td class="ww"><pre>     <div class="b"> <b>  CORPORATE EVENTS </b> </div>
+
+     • THEME DECORATION
+     • CATERING
+     • ENTERTAINMENT
+     • VENUE
+     • INVITATION
+     • PHOTOGRAPHY</pre></td>
+    </tr>
+  </table>
+
+
+
 </body>
 </html>
