--- a/contact.html
+++ b/contact.html
@@ -8,11 +8,35 @@
     <link href="style.css"rel="stylesheet" type="text/css">
 </head>
 <body>
+    <h1>CONTACT US</h1>
     <div class="keys">
-        <a href="C:\Users\yadav\OneDrive\Desktop\wedding.html\wedd.html"><span>HOME</span></a>
-        <a href="C:\Users\yadav\OneDrive\Desktop\wedd.html\Services.html"><span> SERVICES</span></a>
-        <a href="C:\Users\yadav\OneDrive\Desktop\wedd.html\About.html"><span>ABOUTUS</span>  </a>
-        <a href="C:\Users\yadav\OneDrive\Desktop\wedd.html\contact.html"><span>CONTACTUS</span>  </a>
+        <a href="wedd.html"><span>HOME</span></a>
+        <a href="Services.html"><span> SERVICES</span></a>
+        <a href="About.html"><span>ABOUTUS</span>  </a>
+        <a href="contact.html"><span>CONTACTUS</span>  </a>
     </div>
+    <p class="contact-para">"We will be glad to became a part of your unique event"</p>
+   <table class="contact-table" style="width: 100%;">
+     <tr>
+        <td >
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d224368.39371590238!2d77.26107754618056!3d28.516983403738124!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce5a43173357b%3A0x37ffce30c87cc03f!2sNoida%2C%20Uttar%20Pradesh!5e0!3m2!1sen!2sin!4v1673403739852!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </td>
+          <td class="contact-form">
+            <form>
+            <label for="fname"> Name:</label><br>
+            <input type="text"id="fname" name="fname" style="width: 500px; height: 40px;" ><br>
+            <label for="email">Email:</label><br>
+            <input type="email"id="email" name="email" style="width: 500px; height: 40px;"><br>
+            <label for="number">Number:</label><br>
+            <input type="number"id="number" name="number" style="width: 300px; height: 40px;"><br>
+            <label for="message">Message:</label><br>
+            <input type="text"id="message" name="message" style="width: 500px; height: 150px;"><br>
+            <button class="send-button">Send</button>
+
+          </form>
+        </td>
+      </tr>
+    </table>
+    <div><pre class="contact">                       deepasolanki8403@gmail.com                   7683077978                </pre></div>
 </body>
 </html>
