--- a/About.html
+++ b/About.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <div class="keys">
-        <a href="C:\Users\yadav\OneDrive\Desktop\wedding.html\wedd.html"><span>HOME</span></a>
-        <a href="C:\Users\yadav\OneDrive\Desktop\wedd.html\Services.html"><span> SERVICES</span></a>
-        <a href="C:\Users\yadav\OneDrive\Desktop\wedd.html\About.html"><span>ABOUTUS</span>  </a>
-        <a href="C:\Users\yadav\OneDrive\Desktop\wedd.html\contact.html"><span>CONTACTUS</span>  </a>
+        <a href="wedd.html"><span>HOME</span></a>
+        <a href="Services.html"><span> SERVICES</span></a>
+        <a href="About.html"><span>ABOUTUS</span>  </a>
+        <a href="contact.html"><span>CONTACTUS</span>  </a>
     </div>
 </body>
 </html>
