--- a/Services.html
+++ b/Services.html
@@ -19,16 +19,16 @@
           <h2>Our Services</h2>
  
  <div class="img"> 
- <img src="./image2.jpg" width="30%">
- <img src="./c.jpg" width="30%" height="242px">
- <img src="./u.webp" width="30%" height="242px">
+ <img src="./images/image2.jpg" width="30%">
+ <img src=".images/c.jpg" width="30%" height="242px">
+ <img src=".images/u.webp" width="30%" height="242px">
  </div>
   <pre style="font-size: 30px; color: white;" > WEDDING PLANING            CORPORATIVE EVENT          BIRTHDAY PARTY</pre>
      <button class="book-button">BOOK  AN  EVENT</button>
      <P class="ss">BEST WEDDING PLANNING, BIRTHDAY PARTY, CORPORATE PARTY ORGANIZER</P>
   <table>
     <tr>
-        <td class="w"><img src="ww.jpg" width="60%"></td>
+        <td class="w"><img src="./images/ww.jpg" width="60%"></td>
         <td class="ww"><pre>      <div class="b">  <b>  WEDDING PLANNING </b> </div> 
 
      • THEME DECOR   
@@ -48,11 +48,11 @@
       • VENUE
       • INVITATION
       • PHOTOGRAPHY</pre></td>
-        <td><img src="h.jpg" alt=""></td>
+        <td><img src="./images/h.jpg" alt=""></td>
 
     </tr>
     <tr>
-        <td><img src="c.jpg" ></td>
+        <td><img src="./images/c.jpg" ></td>
         <td class="ww"><pre>     <div class="b"> <b>  CORPORATE EVENTS </b> </div>
 
      • THEME DECORATION
