--- a/wedd.html
+++ b/wedd.html
@@ -20,7 +20,7 @@
         <a href="About.html"><span>ABOUTUS</span></a>
         <a href="contact.html"><span>CONTACTUS</span>  </a>
      </div>
-     <img src="q.jpg" width="1340px" height="550px">
+     <img src="./images/q.jpg" width="1340px" height="550px">
      <p> <pre class="l">     WHY TO CHOOSE US.
       
                Think of an event, think event organizer.
@@ -47,7 +47,7 @@
        THEY WILL WANT TO BRING OTHERS AND SHOW THEM HOW WELL YOU DO WHAT YOU DO.”</p>
        <table>
         <tr>
-       <td>  <img src="2-wedding.jpg" width="600px"></td>
+       <td>  <img src="./images/2-wedding.jpg" width="600px"></td>
        <td class="s"><pre style="color: gold;">      PEOPLE LOOK FOR A BEAUTIFUL VENUE.
          WE MAKE A VENUE BEAUTIFUL.</pre>
          The wedding planning begins from detailed discussions with the host, 
