--- a/Services.html
+++ b/Services.html
@@ -20,8 +20,8 @@
  
  <div class="img"> 
  <img src="./images/image2.jpg" width="30%">
- <img src=".images/c.jpg" width="30%" height="242px">
- <img src=".images/u.webp" width="30%" height="242px">
+ <img src="./images/c.jpg" width="30%" height="242px">
+ <img src="./images/u.webp" width="30%" height="242px">
  </div>
   <pre style="font-size: 30px; color: white;" > WEDDING PLANING            CORPORATIVE EVENT          BIRTHDAY PARTY</pre>
      <button class="book-button">BOOK  AN  EVENT</button>
