--- a/contact.html
+++ b/contact.html
@@ -16,12 +16,12 @@
         <a href="contact.html"><span>CONTACTUS</span>  </a>
     </div>
     <p class="contact-para">"We will be glad to became a part of your unique event"</p>
-   <table class="contact-table" style="width: 100%;">
+   <table class="table-space">
      <tr>
         <td >
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d224368.39371590238!2d77.26107754618056!3d28.516983403738124!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce5a43173357b%3A0x37ffce30c87cc03f!2sNoida%2C%20Uttar%20Pradesh!5e0!3m2!1sen!2sin!4v1673403739852!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </td>
-          <td class="contact-form">
+          <td>
             <form>
             <label for="fname"> Name:</label><br>
             <input type="text"id="fname" name="fname" style="width: 500px; height: 40px;" ><br>
@@ -37,6 +37,13 @@
         </td>
       </tr>
     </table>
-    <div><pre class="contact">                       deepasolanki8403@gmail.com                   7683077978                </pre></div>
-</body>
+    <div><pre>                                    </pre></div>
+    <div style="background-color: black; margin-bottom: 0px; margin-top: 100px;">f</div>
+    <div style="height: 40px; background-color: black;">
+    <p class="copy-right">&emsp;&emsp;All rights reserved © 2022 Event Organiser &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+      &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; deepasolanki8403@gmail.com&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+      &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;7683077978
+    </p>
+    </div>
+  </body>
 </html>
