--- a/About.html
+++ b/About.html
@@ -10,10 +10,10 @@
 <body>
     <h1>about us</h1>
     <div class="keys">
-        <a href="C:\Users\yadav\OneDrive\Desktop\wedding.html\wedd.html"><span>HOME</span></a>
-        <a href="C:\Users\yadav\OneDrive\Desktop\wedd.html\Services.html"><span> SERVICES</span></a>
-        <a href="C:\Users\yadav\OneDrive\Desktop\wedd.html\About.html"><span>ABOUTUS</span>  </a>
-        <a href="C:\Users\yadav\OneDrive\Desktop\wedd.html\contact.html"><span>CONTACTUS</span>  </a>
+        <a href="wedd.html"><span>HOME</span></a>
+        <a href="Services.html"><span> SERVICES</span></a>
+        <a href="About.html"><span>ABOUTUS</span>  </a>
+        <a href="contact.html"><span>CONTACTUS</span>  </a>
        
     </div>
     <div class="about">
@@ -111,9 +111,15 @@
 </pre>
                 </pre>
                 </td>
-                 <td class="i"> <img src="./scHpNa.jpg" width="100%" height="150%"></td>
+                 <td class="i"> <img src="./images/scHpNa.jpg" width="100%" height="150%"></td>
         </tr>
     </table>
+    <div style="background-color: black; margin-bottom: 0px; margin-top: 100px;">f</div>
+    <div style="height: 40px; background-color: black;">
+    <p class="copy-right">All rights reserved © 2022 Event Organiser&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; deepasolanki8403@gmail.com&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;7683077978</p>
+    </div>
     </body>
     
 </html>
