--- a/Services.html
+++ b/Services.html
@@ -19,13 +19,14 @@
           <h2>Our Services</h2>
  
  <div class="img"> 
- <img src="./images/image2.jpg" width="30%">
+ <img src="./images/image2.jpg" width="32%">
  <img src="./images/c.jpg" width="30%" height="242px">
  <img src="./images/u.webp" width="30%" height="242px">
  </div>
   <pre style="font-size: 30px; color: white;" > WEDDING PLANING            CORPORATIVE EVENT          BIRTHDAY PARTY</pre>
-     <button class="book-button">BOOK  AN  EVENT</button>
-     <P class="ss">BEST WEDDING PLANNING, BIRTHDAY PARTY, CORPORATE PARTY ORGANIZER</P>
+        <a href="contact.html">
+        <button class="book-button">BOOK  AN  EVENT</button></a>
+        <P class="ss">BEST WEDDING PLANNING, BIRTHDAY PARTY, CORPORATE PARTY ORGANIZER</P>
   <table>
     <tr>
         <td class="w"><img src="./images/ww.jpg" width="60%"></td>
@@ -36,7 +37,9 @@
      • PHOTOGRAPHY
      • ENTERTAINMENT
      • VENUE & INVITATION
-     • FLORAL ARRANGEMENT</pre></td>
+     • FLORAL ARRANGEMENT
+       <a href="Wedding.html"><button class="know-more-button">KNOW MORE</button></a>
+    </pre></td>
     </tr>
     <tr>
         <td class="ww"><pre>  <div class="b">    <b> BIRTHDAY PARTY </b> </div> 
@@ -47,7 +50,9 @@
       • ENTERTAINMENT
       • VENUE
       • INVITATION
-      • PHOTOGRAPHY</pre></td>
+      • PHOTOGRAPHY
+      <a href="bday.html"><button class="know-more-button">KNOW MORE</button></a>
+    </pre></td>
         <td><img src="./images/h.jpg" alt=""></td>
 
     </tr>
@@ -60,10 +65,17 @@
      • ENTERTAINMENT
      • VENUE
      • INVITATION
-     • PHOTOGRAPHY</pre></td>
+     • PHOTOGRAPHY
+     <a href="Party.html"><button class="know-more-button">KNOW MORE</button></a>
+    </pre></td>
     </tr>
   </table>
-
+  <div style="background-color: black; margin-bottom: 0px; margin-top: 100px;">f</div>
+  <div style="height: 40px; background-color: black;">
+  <p class="copy-right">All rights reserved © 2022 Event Organiser&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; deepasolanki8403@gmail.com&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;7683077978</p>
+  </div>
 
 
 </body>
